add page dinh-doc-lap

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                </div>
             </div>
          </section>
-
+         
          <!--==================== ABOUT ====================-->
          <section class="about section" id="about">
             <div class="about__container container grid">
@@ -138,7 +138,7 @@
                      The Independence Palace is a symbol of Vietnam's struggle for independence and freedom. It is a reminder of the sacrifices made by the Vietnamese people to achieve independence. The palace stands as a historical landmark that witnessed many significant events during the Vietnam War and continues to educate visitors about the country's rich history.
                   </p>
    
-                  <a href="" class="button">
+                  <a href="dinh-doc-lap.html" class="button">
                      Explore More
                      <i class="fa-solid fa-arrow-right"></i>
                   </a>
