change background color

--- a/index.html
+++ b/index.html
@@ -68,13 +68,9 @@
                   </h3>
 
                   <h1 class="home__title">
-                     Explore
-                     History of Vietnam
+                     Explore The Independence Palace
                   </h1>
 
-                  <p class="home__description">
-                     The Independence Palace is a symbol of Vietnam's struggle for independence and freedom.
-                  </p>
 
                   <a href="" class="button">
                      Start Tour <i class="fa-solid fa-arrow-right"></i>
@@ -206,6 +202,8 @@
                   </div>
                </article>
             </div>
+
+            <a href="hinh-anh.html" class="button popular__button">Explore Independence Palace <i class="fa-solid fa-arrow-right"></i></a>
          </section>
          
          <!--==================== EXPLORE ====================-->
