add more nav link

--- a/index.html
+++ b/index.html
@@ -40,6 +40,21 @@
                   <li class="nav__item">
                      <a href="#explore" class="nav__link">Explore</a>
                   </li>
+
+                  <li class="nav__item"> 
+                     <a href="" class="nav__link">More</a>
+                     <ul class="nav__sub-menu">
+                        <li class="nav__sub-item">
+                           <a href="dinh-doc-lap.html" class="nav__sub-link">History</a>
+                        </li>
+                        <li class="nav__sub-item">
+                           <a href="hinh-anh.html" class="nav__sub-link">Images</a>
+                        </li>
+                        <li class="nav__sub-item">
+                           <a href="su-kien.html" class="nav__sub-link">Events</a>
+                        </li>
+                     </ul>
+                  </li>
                </ul>
                <!-- Close button -->
                <div class="nav__close" id="nav-close">
@@ -72,7 +87,7 @@
                   </h1>
 
 
-                  <a href="" class="button">
+                  <a href="#about" class="button">
                      Start Tour <i class="fa-solid fa-arrow-right"></i>
                   </a>
                </div>
@@ -232,6 +247,7 @@
                   </div>
                </div>
             </div>
+            <a href="su-kien.html" class="button explore__button">Explore Events <i class="fa-solid fa-arrow-right"></i></a>
          </section>
          
          <!--==================== JOIN ====================-->
