--- a/dinh-doc-lap.html
+++ b/dinh-doc-lap.html
@@ -26,7 +26,7 @@
             <div class="nav__menu" id="nav-menu">
                <ul class="nav__list">
                   <li class="nav__item">
-                     <a href="#history" class="nav__link">History</a>
+                     <a href="#history" class="nav__link active-link">History</a>
                   </li>
                   <li class="nav__item">
                     <a href="#location" class="nav__link">Location Size</a>
@@ -462,7 +462,7 @@
       </a>
 
       <!--=============== SCROLLREVEAL ===============-->
-      <script src=""></script>
+      <script src="assets/js/scrollreveal.min.js"></script>
 
       <!--=============== MAIN JS ===============-->
       <script src="assets/js/main.js"></script>
