--- a/su-kien.html
+++ b/su-kien.html
@@ -24,9 +24,9 @@
             </a>
 
             <div class="nav__menu" id="nav-menu">
-               <ul class="nav__list">
+               <ul class="nav__list">     
                 <li class="nav__item">
-                     <a href="#events" class="nav__link">Events</a>
+                     <a href="#events" class="nav__link active-link">Events</a>
                 </li>
                </ul>
                <!-- Close button -->
@@ -249,7 +249,7 @@
       </a>
 
       <!--=============== SCROLLREVEAL ===============-->
-      <script src=""></script>
+      <script src="assets/js/scrollreveal.min.js"></script>
 
       <!--=============== MAIN JS ===============-->
       <script src="assets/js/main.js"></script>
