add subtitle in image page

--- a/hinh-anh.html
+++ b/hinh-anh.html
@@ -49,6 +49,7 @@
          <!-- Outer Palace section -->
          <section class="outer section" id="outer">
             <h2 class="section__title">Outer Palace</h2>
+            <h3 class="section__subtitle">Pictures of independence palace today</h3>
             <div class="containerr">
                <div class="slider-wrapper">
                   <!-- Thêm nút prev/next -->
@@ -79,6 +80,7 @@
          <!-- Inner Palace section -->
          <section class="inner section" id="inner">
             <h2 class="section__title">Inner Palace</h2>
+            <h3 class="section__subtitle">Pictures of independence palace today</h3>
             <div class="containerr">
                <div class="slider-wrapper">
                   <!-- Thêm nút prev/next -->
