add more nav into pages

--- a/dinh-doc-lap.html
+++ b/dinh-doc-lap.html
@@ -29,11 +29,25 @@
                      <a href="#history" class="nav__link active-link">History</a>
                   </li>
                   <li class="nav__item">
-                    <a href="#location" class="nav__link">Location Size</a>
-                 </li>
-                 <li class="nav__item">
+                     <a href="#location" class="nav__link">Location Size</a>
+                  </li>
+                  <li class="nav__item">
                   <a href="#map" class="nav__link">Map</a>
-               </li>
+                  </li>
+                  <li class="nav__item"> 
+                     <a href="" class="nav__link">More</a>
+                     <ul class="nav__sub-menu">
+                        <li class="nav__sub-item">
+                           <a href="index.html" class="nav__sub-link">Home</a>
+                        </li>
+                        <li class="nav__sub-item">
+                           <a href="hinh-anh.html" class="nav__sub-link">Images</a>
+                        </li>
+                        <li class="nav__sub-item">
+                           <a href="su-kien.html" class="nav__sub-link">Events</a>
+                        </li>
+                     </ul>
+                  </li>
                </ul>
                <!-- Close button -->
                <div class="nav__close" id="nav-close">
