--- a/hinh-anh.html
+++ b/hinh-anh.html
@@ -26,11 +26,25 @@
             <div class="nav__menu" id="nav-menu">
                <ul class="nav__list">
                   <li class="nav__item">
-                    <a href="#outer" class="nav__link active-link">Outer Palace</a>
-                 </li>
-                 <li class="nav__item">
-                  <a href="#inner" class="nav__link">Inner Palace</a>
-               </li>
+                     <a href="#outer" class="nav__link active-link">Outer Palace</a>
+                  </li>
+                  <li class="nav__item">
+                     <a href="#inner" class="nav__link">Inner Palace</a>
+                  </li>
+                  <li class="nav__item"> 
+                     <a href="" class="nav__link">More</a>
+                     <ul class="nav__sub-menu">
+                        <li class="nav__sub-item">
+                           <a href="index.html" class="nav__sub-link">Home</a>
+                        </li>
+                        <li class="nav__sub-item">
+                           <a href="dinh-doc-lap.html" class="nav__sub-link">History</a>
+                        </li>
+                        <li class="nav__sub-item">
+                           <a href="su-kien.html" class="nav__sub-link">Events</a>
+                        </li>
+                     </ul>
+                  </li>
                </ul>
                <!-- Close button -->
                <div class="nav__close" id="nav-close">
