--- a/su-kien.html
+++ b/su-kien.html
@@ -25,9 +25,23 @@
 
             <div class="nav__menu" id="nav-menu">
                <ul class="nav__list">     
-                <li class="nav__item">
-                     <a href="#events" class="nav__link active-link">Events</a>
-                </li>
+                  <li class="nav__item">
+                        <a href="#events" class="nav__link active-link">Events</a>
+                  </li>
+                  <li class="nav__item"> 
+                     <a href="" class="nav__link">More</a>
+                     <ul class="nav__sub-menu">
+                        <li class="nav__sub-item">
+                           <a href="index.html" class="nav__sub-link">Home</a>
+                        </li>
+                        <li class="nav__sub-item">
+                           <a href="dinh-doc-lap.html" class="nav__sub-link">History</a>
+                        </li>
+                        <li class="nav__sub-item">
+                           <a href="hinh-anh.html" class="nav__sub-link">Images</a>
+                        </li>
+                     </ul>
+                  </li>
                </ul>
                <!-- Close button -->
                <div class="nav__close" id="nav-close">
