k bit noi j nua het dm

--- a/index.html
+++ b/index.html
@@ -83,8 +83,12 @@
                   </h3>
 
                   <h1 class="home__title">
-                     Explore The Independence Palace
+                     Explore <br> The Independence Palace
                   </h1>
+
+                  <p class="home__description">
+                     The Independence Palace is a symbol of Vietnam's struggle for independence and freedom. 
+                  </p>
 
 
                   <a href="#about" class="button">
