--- a/su-kien.html
+++ b/su-kien.html
@@ -40,6 +40,9 @@
                         <li class="nav__sub-item">
                            <a href="hinh-anh.html" class="nav__sub-link">Images</a>
                         </li>
+                        <li class="nav__sub-item">
+                           <a href="luu-but.html" class="nav__sub-link">Guest Book <i class="fa-solid fa-pen"></i></a>
+                        </li>
                      </ul>
                   </li>
                </ul>
