--- a/dinh-doc-lap.html
+++ b/dinh-doc-lap.html
@@ -46,6 +46,9 @@
                         <li class="nav__sub-item">
                            <a href="su-kien.html" class="nav__sub-link">Events</a>
                         </li>
+                        <li class="nav__sub-item">
+                           <a href="luu-but.html" class="nav__sub-link">Guest Book <i class="fa-solid fa-pen"></i></a>
+                        </li>
                      </ul>
                   </li>
                </ul>
