--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                         <li class="nav__sub-item">
                            <a href="su-kien.html" class="nav__sub-link">Events</a>
                         </li>
+                        <li class="nav__sub-item">
+                           <a href="luu-but.html" class="nav__sub-link">Guest Book <i class="fa-solid fa-pen"></i></a>
+                        </li>
                      </ul>
                   </li>
                </ul>
@@ -81,7 +84,7 @@
                   <h3 class="home__subtitle">
                      Welcome to the Independence Palace
                   </h3>
-
+                  
                   <h1 class="home__title">
                      Explore <br> The Independence Palace
                   </h1>
