--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="popular__container container grid">
                <article class="popular__card">
                   <div class="popular__image">
-                     <img src="assets/img2/hinh-anh-ben-trong/hinh-anh-1.webp" alt="" class="popular__img">
+                     <img src="assets/img2/popular/hinh-anh-1.jpg" alt="" class="popular__img">
                      <div class="popular__shadow"></div>
                   </div>
 
@@ -194,7 +194,7 @@
 
                <article class="popular__card">
                   <div class="popular__image">
-                     <img src="assets/img2/hinh-anh-ben-trong/hinh-anh-2.avif" alt="" class="popular__img">
+                     <img src="assets/img2/popular/hinh-anh-2.jpg" alt="" class="popular__img">
                      <div class="popular__shadow"></div>
                   </div>
 
@@ -210,7 +210,7 @@
 
                <article class="popular__card">
                   <div class="popular__image">
-                     <img src="assets/img2/hinh-anh-ben-trong/hinh-anh-3.avif" alt="" class="popular__img">
+                     <img src="assets/img2/popular/hinh-anh-3.jpg" alt="" class="popular__img">
                      <div class="popular__shadow"></div>
                   </div>
 
