--- a/su-kien.html
+++ b/su-kien.html
@@ -156,6 +156,12 @@
          </section>
       </main>
 
+      <div class="modal-events">
+         <div class="modal-events-container">
+            
+         </div>
+      </div>
+
       <!--==================== FOOTER ====================-->
       <footer class="footer">
          <div class="footer__container container grid">
