--- a/luu-but.html
+++ b/luu-but.html
@@ -117,13 +117,13 @@
             <div class="memory__status red">
                <div class="memory__header">
                   <div class="memory__data">
-                     <img src="assets/img2/users/huy-bui.jpg" alt="" class="memory__img">
+                     <img src="assets/img2/users/khoa.jpg" alt="" class="memory__img">
                      <div class="memory__data-user">
                         <h3 class="memory__name">
-                           Bui Quoc Huy
+                           Vo Dang Khoa
                         </h3>
                         <p class="memory__time">
-                           Uploaded on: December 28, 2024
+                           Uploaded on: April 12, 2023
                         </p>
                      </div>
                   </div>
@@ -131,7 +131,9 @@
                </div>
 
                <div class="memory__comment">
-                  <p class="memory__comment-status">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi id veniam, magni vitae suscipit facilis, doloribus enim alias porro volup consectetur dolorem delectus quod quis neque reprehenderit doloremque ipsum aut? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab, quidem officia iusto rerum nemo tempore alias eligendi amet nulla consequatur quas velit dolor mollitia ad? Voluptate saepe sequi hic labore?</p>
+                  <p class="memory__comment-status">
+                     Hôm nay, tôi đã tham gia làm tình nguyện viên trong chương trình khám phá Dinh Độc Lập, và trải nghiệm thật tuyệt vời. Vừa đặt chân đến, tôi đã cảm nhận được không khí sôi nổi của các bạn sinh viên, những người cùng chung tay tạo nên một sự kiện ý nghĩa. Được hướng dẫn tham quan, tôi thấy niềm tự hào khi giới thiệu về lịch sử và văn hóa nơi đây. <br>
+                     </p>
                   <div class="memory__comment-image">
                      <img class="memory__comment-img" src="./assets/img2/outer-palace/IMG_1931.png" alt="">
                      <img class="memory__comment-img" src="./assets/img2/outer-palace/IMG_3757.jpeg" alt="">
@@ -143,13 +145,13 @@
             <div class="memory__status blue">
                <div class="memory__header">
                   <div class="memory__data">
-                     <img src="assets/img2/users/huy-bui.jpg" alt="" class="memory__img">
+                     <img src="assets/img2/users/hien.jpg" alt="" class="memory__img">
                      <div class="memory__data-user">
                         <h3 class="memory__name">
-                           Bui Quoc Huy
+                           Nguyen Thi Thu Hien
                         </h3>
                         <p class="memory__time">
-                           Uploaded on: December 28, 2024
+                           Uploaded on: March 3, 2023
                         </p>
                      </div>
                   </div>
@@ -157,7 +159,8 @@
                </div>
 
                <div class="memory__comment">
-                  <p class="memory__comment-status">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi id veniam, magni vitae suscipit facilis, doloribus enim alias porro volup consectetur dolorem delectus quod quis neque reprehenderit doloremque ipsum aut? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab, quidem officia iusto rerum nemo tempore alias eligendi amet nulla consequatur quas velit dolor mollitia ad? Voluptate saepe sequi hic labore?</p>
+                  <p class="memory__comment-status">Đây là lần đầu tiên tôi đến Dinh Độc Lập và bị cuốn hút bởi vẻ đẹp nơi đây cùng khuôn viên xanh mát. Đứng cạnh chiếc xe tăng, tôi cảm nhận được lịch sử hào hùng và nỗi đau của dân tộc, trong không khí sôi động của những người xung quanh. Dinh Độc Lập không chỉ là di tích lịch sử mà còn là nguồn niềm tự hào về quê hương, tạo nên một trải nghiệm khó quên!
+                  </p>
                   <div class="memory__comment-image">
                      <img class="memory__comment-img" src="./assets/img2/outer-palace/IMG_4852.PNG" alt="">
                      <img class="memory__comment-img" src="./assets/img2/outer-palace/IMG_3742.jpeg" alt="">
@@ -168,13 +171,13 @@
             <div class="memory__status pink">
                <div class="memory__header">
                   <div class="memory__data">
-                     <img src="assets/img2/users/huy-bui.jpg" alt="" class="memory__img">
+                     <img src="https://th.bing.com/th/id/OIP.5NOgxrmoUNYw7xEkB-n32AHaJQ?rs=1&pid=ImgDetMain" alt="" class="memory__img">
                      <div class="memory__data-user">
                         <h3 class="memory__name">
-                           Bui Quoc Huy
+                           Ms. Canny 
                         </h3>
                         <p class="memory__time">
-                           Uploaded on: December 28, 2024
+                           Uploaded on: June 19, 2023
                         </p>
                      </div>
                   </div>
@@ -182,7 +185,8 @@
                </div>
 
                <div class="memory__comment">
-                  <p class="memory__comment-status">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi id veniam, magni vitae suscipit facilis, doloribus enim alias porro volup consectetur dolorem delectus quod quis neque reprehenderit doloremque ipsum aut? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab, quidem officia iusto rerum nemo tempore alias eligendi amet nulla consequatur quas velit dolor mollitia ad? Voluptate saepe sequi hic labore?</p>
+                  <p class="memory__comment-status">As a visitor from Russia, my trip to the Independence Palace was truly enriching. The stunning architecture and lush gardens captivated me right away. Walking through the grounds, I felt a deep respect for the significant events that took place there. The details of the building's façade added to its charm, inviting me to explore further. I enjoyed interacting with the friendly staff and other visitors.
+                  </p>
                   <div class="memory__comment-image">
                      <img class="memory__comment-img" src="./assets/img2/outer-palace/IMG_3781.jpeg" alt="">
                   </div>
@@ -192,13 +196,13 @@
             <div class="memory__status green">
                <div class="memory__header">
                   <div class="memory__data">
-                     <img src="assets/img2/users/huy-bui.jpg" alt="" class="memory__img">
+                     <img src="assets/img2/users/huong.jpg" alt="" class="memory__img">
                      <div class="memory__data-user">
                         <h3 class="memory__name">
-                           Bui Quoc Huy
+                           Le Doan Kim Huong
                         </h3>
                         <p class="memory__time">
-                           Uploaded on: December 28, 2024
+                           Uploaded on: April 30, 2024
                         </p>
                      </div>
                   </div>
@@ -206,7 +210,7 @@
                </div>
 
                <div class="memory__comment">
-                  <p class="memory__comment-status">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi id veniam, magni vitae suscipit facilis, doloribus enim alias porro volup consectetur dolorem delectus quod quis neque reprehenderit doloremque ipsum aut? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab, quidem officia iusto rerum nemo tempore alias eligendi amet nulla consequatur quas velit dolor mollitia ad? Voluptate saepe sequi hic labore?</p>
+                  <p class="memory__comment-status">Tôi rất vinh dự tham quan Dinh Độc Lập vào ngày kỷ niệm 49 năm thống nhất đất nước. Không khí trang trọng và tự hào giúp tôi cảm nhận sâu sắc sức sống của lịch sử qua từng hiện vật và góc nhỏ. Khi rời nơi đây, tôi đã hứa sẽ trở lại vào lễ kỷ niệm 50 năm thống nhất năm sau để tham gia những hoạt động kỷ niệm. Chuyến thăm này là một trải nghiệm đáng nhớ trong cuộc đời tôi!</p>
                   <div class="memory__comment-image">
                      <img class="memory__comment-img" src="./assets/img2/inner-palace/Copy of IMG_3801.JPG" alt="">
                      <img class="memory__comment-img" src="./assets/img2/inner-palace/Copy of IMG_3808.JPG" alt="">
@@ -224,7 +228,7 @@
                            Bui Quoc Huy
                         </h3>
                         <p class="memory__time">
-                           Uploaded on: December 28, 2024
+                           Uploaded on: September 16, 2024
                         </p>
                      </div>
                   </div>
@@ -232,7 +236,7 @@
                </div>
 
                <div class="memory__comment">
-                  <p class="memory__comment-status">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi id veniam, magni vitae suscipit facilis, doloribus enim alias porro volup consectetur dolorem delectus quod quis neque reprehenderit doloremque ipsum aut? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab, quidem officia iusto rerum nemo tempore alias eligendi amet nulla consequatur quas velit dolor mollitia ad? Voluptate saepe sequi hic labore?</p>
+                  <p class="memory__comment-status">Nhân dịp đến Dinh Độc Lập để thu thập tư liệu cho đồ án, tôi đã có những cảm xúc đặc biệt. Ngay khi đặt chân vào khuôn viên, vẻ đẹp kiến trúc và không gian lịch sử của nơi đây đã cuốn hút tôi. Tôi cảm thấy hạnh phúc khi được chứng kiến những hiện vật và tài liệu quý giá, gợi nhớ về những giai đoạn khó khăn của đất nước. Chuyến đi không chỉ giúp tôi hoàn thành đồ án mà còn để lại nhiều kỷ niệm đẹp và nguồn cảm hứng lớn cho dự án của mình.</p>
                   <div class="memory__comment-image">
                      <img class="memory__comment-img" src="./assets/img2/outer-palace/IMG_1931.png" alt="">
                      <img class="memory__comment-img" src="./assets/img2/outer-palace/IMG_3757.jpeg" alt="">
@@ -244,13 +248,13 @@
             <div class="memory__status blue">
                <div class="memory__header">
                   <div class="memory__data">
-                     <img src="assets/img2/users/huy-bui.jpg" alt="" class="memory__img">
+                     <img src="https://scontent.fsgn19-1.fna.fbcdn.net/v/t39.30808-6/335334825_1834654890241192_349378716919018577_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeGvx7zsRIJp0iVDqjicLsJ3kcKw0V2JLbqRwrDRXYktunw1vH2XUYgLb1fiMdSP80QvRQkJINUneIhy4sBI9cfO&_nc_ohc=Wm2kWnTJImYQ7kNvgFSPhMm&_nc_oc=AdhU4Y-IWZHNK_8NrNqaDzna0mvk3Zu7LgdjmS5VxhiggvQjPA2N8kZErSWqwmbyMHg&_nc_zt=23&_nc_ht=scontent.fsgn19-1.fna&_nc_gid=AyootH3D9ucSdyeQxNDSvqk&oh=00_AYBBGQaaTz537qKl3KkRKAO5mQRZO76GALxTfoPcDFB3iQ&oe=677896AA" alt="" class="memory__img">
                      <div class="memory__data-user">
                         <h3 class="memory__name">
-                           Bui Quoc Huy
+                           Phan Huu Viet Anh
                         </h3>
                         <p class="memory__time">
-                           Uploaded on: December 28, 2024
+                           Uploaded on: December 25, 2024
                         </p>
                      </div>
                   </div>
@@ -258,7 +262,7 @@
                </div>
 
                <div class="memory__comment">
-                  <p class="memory__comment-status">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi id veniam, magni vitae suscipit facilis, doloribus enim alias porro volup consectetur dolorem delectus quod quis neque reprehenderit doloremque ipsum aut? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab, quidem officia iusto rerum nemo tempore alias eligendi amet nulla consequatur quas velit dolor mollitia ad? Voluptate saepe sequi hic labore?</p>
+                  <p class="memory__comment-status">Chuyến khám phá lịch sử tại Dinh Độc Lập cùng gia đình là một trải nghiệm tuyệt vời. Ngay từ cổng vào, không khí lịch sử khiến chúng tôi cảm thấy hào hứng và tự hào. Khi khám phá từng phòng, tôi đã cảm nhận sâu sắc những câu chuyện về quá khứ của đất nước và gắn kết gia đình thêm gần gũi. Tôi hy vọng sẽ có dịp trở lại Dinh Độc Lập để cùng gia đình trải nghiệm thêm nhiều điều thú vị!</p>
                   <div class="memory__comment-image">
                      <img class="memory__comment-img" src="./assets/img2/outer-palace/IMG_4852.PNG" alt="">
                      <img class="memory__comment-img" src="./assets/img2/outer-palace/IMG_3742.jpeg" alt="">
