--- a/su-kien.html
+++ b/su-kien.html
@@ -156,9 +156,10 @@
          </section>
       </main>
 
-      <div class="modal-events">
+      <div class="modal-events active">
          <div class="modal-events-container">
-            
+            <img class="modal-events__img" src="./assets/img2/banner-sukien.jpg" alt="">
+            <i class="fa-solid fa-xmark modal-events__icon"></i>
          </div>
       </div>
 
